package sample;

public class TextEditor {

}
